# nicegui-demo

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
config/: config.py
src/: data.py  exporter.py  visualizer.py
src/pages/: export.py  home.py
