[project]
name = "nicegui-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageio[ffmpeg]>=2.37.3",
    "matplotlib>=3.10.9",
    "nicegui>=3.12.1",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
]
